--- a/app/src/main/res/layout/activity_praticar.xml
+++ b/app/src/main/res/layout/activity_praticar.xml
@@ -39,8 +39,9 @@
        <Chronometer
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
+           android:textColor="@color/red"
            tools:targetApi="TIRAMISU"
-           android:textSize="20sp"
+           android:textSize="18sp"
            android:id="@+id/cronometro">
 
        </Chronometer>
