--- a/app/src/main/res/layout/activity_redefir_senha.xml
+++ b/app/src/main/res/layout/activity_redefir_senha.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".LoginActivity">
+    tools:context=".RedefirSenha">
 
 
     <ImageView
@@ -21,37 +21,28 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="email"
-        android:layout_margin="32dp"
-        android:inputType="textEmailAddress" />
 
-    <EditText
-        android:id="@+id/editSenha"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="senha"
         android:layout_marginHorizontal="32dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
 
-        android:inputType="textPassword" />
-
+        android:inputType="textEmailAddress" />
     <TextView
-        android:id="@+id/textRecuperarSenha"
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="left"
-        android:layout_marginLeft="32dp"
-        android:textColor="@android:color/holo_blue_dark"
-        android:text="esqueci minha senha">
-
+        android:layout_gravity="center"
+        android:layout_marginHorizontal="32dp"
+        android:text="Você receberá um email com as informações de redefinição de senha">
     </TextView>
 
     <Button
         android:id="@+id/btnEntrar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="16dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginBottom="16dp"
         android:layout_gravity="center"
-        android:text="Entrar" />
+        android:text="Enviar" />
 
     <TextView
         android:id="@+id/textCadastro"
