--- a/app/src/main/res/layout/activity_redefir_senha.xml
+++ b/app/src/main/res/layout/activity_redefir_senha.xml
@@ -36,7 +36,7 @@
     </TextView>
 
     <Button
-        android:id="@+id/btnEntrar"
+        android:id="@+id/btnEnviar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
