--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -54,12 +54,28 @@
         android:layout_gravity="center"
         android:text="Entrar" />
 
-    <TextView
-        android:id="@+id/textCadastro"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="Não tem conta? Cadastre-se">
+ <LinearLayout
+     android:layout_width="wrap_content"
+     android:layout_height="wrap_content"
+     android:id="@+id/llCadastroUsuario"
+     android:orientation="horizontal">
+     <TextView
 
-    </TextView>
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_gravity="center"
+         android:text="Não tem conta? ">
+
+     </TextView>
+
+     <TextView
+
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_gravity="center"
+         android:textColor="@android:color/holo_blue_dark"
+         android:text=" Cadastre-se">
+
+     </TextView>
+ </LinearLayout>
 </LinearLayout>
