--- a/app/src/main/res/layout/activity_praticar.xml
+++ b/app/src/main/res/layout/activity_praticar.xml
@@ -30,22 +30,20 @@
         <TextView
             android:id="@+id/textJogada"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:textSize="25sp"
-            android:layout_height="wrap_content">
+            android:textSize="25sp">
 
         </TextView>
 
-       <Chronometer
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:textColor="@color/red"
-           tools:targetApi="TIRAMISU"
-           android:textSize="18sp"
-           android:id="@+id/cronometro">
-
-       </Chronometer>
+        <TextView
+            android:id="@+id/timerTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/red"
+            android:textSize="18sp"
+            android:text="00:00:00.000" />
 
 
     </LinearLayout>
@@ -64,20 +62,20 @@
         </TextView>
 
         <TextView
+            android:id="@+id/qtdJogadas"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/qtdJogadas"
             android:text="0 ">
 
         </TextView>
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvJogadas"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/rvJogadas"
-        tools:listitem="@layout/item_jogadas"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        tools:listitem="@layout/item_jogadas">
 
     </androidx.recyclerview.widget.RecyclerView>
 
