--- a/app/src/main/res/layout/activity_lista_usuarios.xml
+++ b/app/src/main/res/layout/activity_lista_usuarios.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ListaUsuariosActivity">
+    tools:context=".activity.ListaUsuariosActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,7 +27,7 @@
         android:id="@+id/rvUsuarios"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/item_usuario">
+        tools:listitem="@layout/item_usuarios_vs">
 
     </androidx.recyclerview.widget.RecyclerView>
 </LinearLayout>
