--- a/app/src/main/res/layout/activity_praticar.xml
+++ b/app/src/main/res/layout/activity_praticar.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
 
     android:orientation="vertical"
-    tools:context=".PraticarActivity">
+    tools:context=".activity.PraticarActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -37,15 +37,13 @@
 
         </TextView>
 
-       <Chronometer
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:textColor="@color/red"
-           tools:targetApi="TIRAMISU"
-           android:textSize="18sp"
-           android:id="@+id/cronometro">
-
-       </Chronometer>
+        <TextView
+            android:id="@+id/timerTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/red"
+            android:textSize="18sp"
+            android:text="00:00:00.00" />
 
 
     </LinearLayout>
