--- a/app/src/main/res/layout/activity_redefir_senha.xml
+++ b/app/src/main/res/layout/activity_redefir_senha.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".RedefirSenha">
+    tools:context=".activity.RedefirSenha">
 
 
     <ImageView
