--- a/app/src/main/res/layout/item_usuarios_vs.xml
+++ b/app/src/main/res/layout/item_usuarios_vs.xml
@@ -30,6 +30,29 @@
 
         </TextView>
 
+        <ImageView
+            android:id="@+id/imageStatus"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_gravity="center"
+            android:layout_marginHorizontal="10dp"
+            android:src="@drawable/vs">
+
+        </ImageView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:padding="4dp"
+            android:background="@drawable/bg_borda_arredondada"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            tools:text="PP81220">
+
+        </TextView>
     </LinearLayout>
 
 </LinearLayout>
