--- a/app/src/main/res/layout/teclado.xml
+++ b/app/src/main/res/layout/teclado.xml
@@ -2,6 +2,7 @@
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root"
     android:orientation="vertical">
 
@@ -64,7 +65,9 @@
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnSalvar"
             style="@style/button"
+            android:backgroundTint="@color/color_verde"
             android:visibility="invisible"
+            tools:visibility = "visible"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:text="S"></androidx.appcompat.widget.AppCompatButton>
