--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -25,4 +25,19 @@
         <item name="android:textStyle">bold</item>
 
     </style>
+
+    <style name="Button" parent="@style/Theme.TiroMosca">
+
+        <item name="android:textColor">@color/branco</item>
+        <item name="android:background">@drawable/bg_btn</item>
+        <item name="android:layout_marginTop">16dp</item>
+        <item name="textAllCaps">false</item>
+        <item name="android:textStyle">bold</item>
+
+    </style>
+
+    <style name="CustomAlertDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:windowBackground">@drawable/bg_dialog</item>
+        <item name="android:windowMinWidthMinor">80%</item>
+    </style>
 </resources>
