--- a/app/src/main/res/layout/activity_ranking.xml
+++ b/app/src/main/res/layout/activity_ranking.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_margin="16dp"
+    android:padding="16dp"
     android:layout_height="match_parent"
     tools:context=".activity.RankingActivity">
 
