--- a/app/src/main/res/layout/dialog_progress.xml
+++ b/app/src/main/res/layout/dialog_progress.xml
@@ -4,6 +4,7 @@
     android:layout_height="200dp"
     android:orientation="vertical"
     android:gravity="center"
+    android:background="@color/transparente"
     android:layout_gravity="center"
     >
 
