--- a/app/src/main/res/layout/activity_ajuda.xml
+++ b/app/src/main/res/layout/activity_ajuda.xml
@@ -142,17 +142,14 @@ Agora vamos lá! Bom jogo."
 
     </TextView>
 
-    <androidx.appcompat.widget.AppCompatButton
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:paddingHorizontal="16dp"
-        android:background="@drawable/bg_borda_arredondada"
-        android:backgroundTint="@color/color_verde"
         android:layout_marginVertical="30dp"
-        android:textColor="@color/branco"
+        android:textStyle="bold"
         android:id="@+id/btnPraticar"
-        android:text="P r a t i c a r">
+        android:text="P R A T I C A R">
 
-    </androidx.appcompat.widget.AppCompatButton>
+    </Button>
 </LinearLayout>
