--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,7 +29,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
-        android:drawableRight="@drawable/baseline_visibility_off_24"
+        android:drawableRight="@drawable/baseline_visibility_24"
         android:layout_marginTop="32dp"
         android:hint="senha"
         android:inputType="textPassword"
@@ -50,9 +50,10 @@
         android:id="@+id/btnEntrar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textStyle="bold"
         android:layout_marginVertical="16dp"
         android:layout_gravity="center"
-        android:text="Entrar" />
+        android:text="E N T R A R" />
 
  <LinearLayout
      android:layout_width="wrap_content"
