--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -144,7 +144,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
-        android:text="Login">
+        android:textStyle="bold"
+        android:text="L O G I N">
 
     </Button>
 </LinearLayout>
