--- a/app/src/main/res/layout/activity_ranking.xml
+++ b/app/src/main/res/layout/activity_ranking.xml
@@ -19,15 +19,15 @@
 
     </androidx.recyclerview.widget.RecyclerView>
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:layout_width="match_parent"
+    <Button
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:background="@drawable/bg_borda_arredondada"
-        android:backgroundTint="@color/color_verde"
-        android:text="inicio"
+        android:layout_gravity="center"
+        android:textStyle="bold"
+        android:text="J O G A R"
         android:id="@+id/btnInicio">
 
-    </androidx.appcompat.widget.AppCompatButton>
+    </Button>
 
 </LinearLayout>
