--- a/app/src/main/res/layout/activity_redefir_senha.xml
+++ b/app/src/main/res/layout/activity_redefir_senha.xml
@@ -41,8 +41,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
         android:layout_marginBottom="16dp"
+        android:textStyle="bold"
         android:layout_gravity="center"
-        android:text="Enviar" />
+        android:text="E N V I A R" />
 
     <TextView
         android:id="@+id/textCadastro"
